--- a/coffee/package.json
+++ b/coffee/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
+    "dev": "http-server -p 8080",
     "start": "ng serve",
     "build": "ng build --prod",
     "test": "ng test",
@@ -32,6 +33,7 @@
     "@angular/cli": "1.6.5",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@angular/service-worker": "^5.2.4",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
