--- a/coffee/src/ngsw-config.json
+++ b/coffee/src/ngsw-config.json
@@ -21,6 +21,10 @@
     "resources": {
       "files": [
         "/assets/**"
+      ],
+      "urls": [
+        "https://fonts.googleapis.com/icon?family=Material+Icons",
+        "https://fonts.gstatic.com/s/materialicons/v36/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2"
       ]
     }
   }]
