--- a/coffee/src/ngsw-config.json
+++ b/coffee/src/ngsw-config.json
@@ -27,5 +27,17 @@
         "https://fonts.gstatic.com/s/materialicons/v36/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2"
       ]
     }
-  }]
+  }],
+  "dataGroups": [
+    {
+      "name": "api",
+      "urls": [ "http://localhost:3000/coffees"],
+      "cacheConfig": {
+        "strategy": "freshness",
+        "maxSize": 15,
+        "maxAge": "1h",
+        "timeout": "5s"
+      }
+    }
+  ]
 }
